# projectPhoenix

./: .gitignore  .rosinstall  README.md  chrisTest.txt  rvizLaserConfig.vcg  rvizRangeConfig.vcg  sonarViewer.vcg  sonarViewerIMU.vcg
.git-backup-21-6/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
.git-backup-21-6/logs/: HEAD
Bags/Sonar/: 2013-04-05-15-26-14.bag
Drivers/IMU/: CMakeLists.txt  mainpage.dox  manifest.xml
Drivers/compass/: CMakeLists.txt  manifest.xml
Drivers/imu/: CMakeLists.txt  imu.launch  mainpage.dox  manifest.xml
Drivers/motors/: CMakeLists.txt  mainpage.dox  manifest.xml
Drivers/serial_port/: CMakeLists.txt  mainpage.dox  manifest.xml
Drivers/sonar/: .CMakeLists.txt.swp  CMakeLists.txt  manifest.xml
Drivers/sonar/include/sonar/: sea_net_packet.hpp
Drivers/sonar/src/: sea_net_packet.cpp  sonar_driver.cpp
Drivers/sonar/src/sonar_interface/: .sonar_interface.cpp.swp  sonar_interface.cpp
Drivers/sonar/src/sonar_scanner/: sonar_scanner.cpp  sonar_scanner.h
Drivers/svs/: CMakeLists.txt  mainpage.dox  manifest.xml
Gui/camViewer/: CMakeLists.txt  mainpage.dox  manifest.xml
Gui/example/: CMakeLists.txt  mainpage.dox  manifest.xml  rosbuild.cmake
Gui/phoenix_gui/: CMakeLists.txt  final_values.ini  (+8 more)
Logs/: log.txt
custom_msg/: mainpage.dox  manifest.xml
heart_beat/: CMakeLists.txt  mainpage.dox  manifest.xml
killer/: CMakeLists.txt  mainpage.dox  manifest.xml
launch/: hardware.launch  imu.launch  main.launch  manifest.xml  mission.launch  pid.launch  rov.launch  svp.launch  testing.launch  xbox.launch
(+190 files in other folders)
